# Copyright (C) 2009 Mario Sanchez Prada
# Authors: Mario Sanchez Prada <msanchez@igalia.com>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of version 3 of the GNU General Public
# License as published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this program; if not, write to the
# Free Software Foundation, Inc., 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.

MAINTAINERCLEANFILES = \
	Makefile.in \
	aclocal.m4 \
	compile \
	config.guess \
	config.h.in \
	config.h.in~ \
	config.sub \
	configure \
	data/frogr.desktop \
	debian/files \
	debian/stamp-autotools-files \
	debian/stamp-makefile-build \
	debian/frogr.debhelper.log \
	debian/frogr.postinst.debhelper \
	debian/frogr.postrm.debhelper \
	debian/frogr.substvars \
	depcomp \
	install-sh \
	ltmain.sh \
	missing \
	mkinstalldirs

SUBDIRS = src po examples

ACLOCAL_AMFLAGS=-I m4

pixmapdir = $(datadir)/icons
pixmap_DATA = $(srcdir)/data/icons/frogr.xpm
icon16dir = $(datadir)/icons/hicolor/16x16/apps
icon16_DATA = $(srcdir)/data/icons/hicolor/16x16/apps/frogr.png
icon24dir = $(datadir)/icons/hicolor/24x24/apps
icon24_DATA = $(srcdir)/data/icons/hicolor/24x24/apps/frogr.png
icon32dir = $(datadir)/icons/hicolor/32x32/apps
icon32_DATA = $(srcdir)/data/icons/hicolor/32x32/apps/frogr.png
icon48dir = $(datadir)/icons/hicolor/48x48/apps
icon48_DATA = $(srcdir)/data/icons/hicolor/48x48/apps/frogr.png
icon64dir = $(datadir)/icons/hicolor/64x64/apps
icon64_DATA = $(srcdir)/data/icons/hicolor/64x64/apps/frogr.png
icon128dir = $(datadir)/icons/hicolor/128x128/apps
icon128_DATA = $(srcdir)/data/icons/hicolor/128x128/apps/frogr.png
iconscalabledir = $(datadir)/icons/hicolor/scalable/apps
iconscalable_DATA = $(srcdir)/data/icons/hicolor/scalable/apps/frogr.svg

imagesdir = $(appdatadir)/images
images_DATA = $(srcdir)/data/images/mpictures.png

gtkbuilderdir = $(appdatadir)/gtkbuilder
gtkbuilder_DATA = $(srcdir)/data/gtkbuilder/frogr-main-view.xml \
	$(srcdir)/data/gtkbuilder/frogr-details-dialog.xml

desktopentrydir = $(datadir)/applications
desktopentry_DATA = $(srcdir)/data/frogr.desktop

edit = sed -e 's,@BINDIR\@,$(bindir),g' -e 's,@PIXMAPDIR\@,$(pixmapdir),g'

$(srcdir)/data/frogr.desktop: $(srcdir)/data/frogr.desktop.in
	$(edit) $(srcdir)/data/frogr.desktop.in > $(srcdir)/data/frogr.desktop

EXTRA_DIST = \
	$(srcdir)/MAINTAINERS \
	$(srcdir)/TRANSLATORS \
	$(srcdir)/TODO \
	$(srcdir)/data/frogr.desktop.in \
	$(pixmap_DATA) \
	$(icon16_DATA) \
	$(icon24_DATA) \
	$(icon32_DATA) \
	$(icon48_DATA) \
	$(icon64_DATA) \
	$(icon128_DATA) \
	$(iconscalable_DATA) \
	$(gtkbuilder_DATA) \
	$(images_DATA)

dist-hook:
	@if test -d "$(srcdir)/.git"; \
	then \
		echo Creating ChangeLog && \
		( cd "$(top_srcdir)" && \
		  echo '# Generated by Makefile. Do not edit.'; echo; \
		  $(top_srcdir)/missing --run git log --stat ) > ChangeLog.tmp \
		&& mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
		|| ( rm -f ChangeLog.tmp ; \
		     echo Failed to generate ChangeLog >&2 ); \
	else \
		echo A git clone is required to generate a ChangeLog >&2; \
	fi
