# Copyright (C) 2009-2011 Mario Sanchez Prada
# Authors: Mario Sanchez Prada <msanchez@igalia.com>
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of version 3 of the GNU General Public
# License as published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this program; if not, write to the
# Free Software Foundation, Inc., 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.

MAINTAINERCLEANFILES = \
	Makefile.in \
	aclocal.m4 \
	compile \
	config.guess \
	config.h.in \
	config.h.in~ \
	config.sub \
	configure \
	data/frogr.desktop \
	data/frogr.desktop.in \
	debian/files \
	debian/stamp-autotools-files \
	debian/stamp-makefile-build \
	debian/frogr.debhelper.log \
	debian/frogr.postinst.debhelper \
	debian/frogr.postrm.debhelper \
	debian/frogr.substvars \
	depcomp \
	install-sh \
	ltmain.sh \
	missing \
	mkinstalldirs

SUBDIRS = src po examples

ACLOCAL_AMFLAGS=-I m4

pixmapdir = $(datadir)/pixmaps
pixmap_DATA = data/pixmaps/frogr.xpm
icon16dir = $(datadir)/icons/hicolor/16x16/apps
icon16_DATA = data/icons/hicolor/16x16/apps/frogr.png
icon24dir = $(datadir)/icons/hicolor/24x24/apps
icon24_DATA = data/icons/hicolor/24x24/apps/frogr.png
icon32dir = $(datadir)/icons/hicolor/32x32/apps
icon32_DATA = data/icons/hicolor/32x32/apps/frogr.png
icon48dir = $(datadir)/icons/hicolor/48x48/apps
icon48_DATA = data/icons/hicolor/48x48/apps/frogr.png
icon64dir = $(datadir)/icons/hicolor/64x64/apps
icon64_DATA = data/icons/hicolor/64x64/apps/frogr.png
icon128dir = $(datadir)/icons/hicolor/128x128/apps
icon128_DATA = data/icons/hicolor/128x128/apps/frogr.png
iconscalabledir = $(datadir)/icons/hicolor/scalable/apps
iconscalable_DATA = data/icons/hicolor/scalable/apps/frogr.svg

imagesdir = $(datadir)/frogr/images
images_DATA = data/images/mpictures.png

gtkbuilderdir = $(datadir)/frogr/gtkbuilder
gtkbuilder_DATA = data/gtkbuilder/frogr-main-view.xml

desktopentrydir = $(datadir)/applications
desktopentry_DATA = $(builddir)/data/frogr.desktop
@INTLTOOL_DESKTOP_RULE@

man1_MANS = data/manpages/frogr.1

edit = sed -e 's,@BINDIR\@,$(bindir),g' -e 's,@PIXMAPDIR\@,$(pixmapdir),g'

data/frogr.desktop.in: data/frogr.desktop.in.in
	mkdir -p $(builddir)/data
	$(edit) $(srcdir)/data/frogr.desktop.in.in > $(builddir)/data/frogr.desktop.in

DISTCLEANFILES = \
	$(builddir)/data/frogr.desktop \
	$(builddir)/data/frogr.desktop.in

EXTRA_DIST = \
	MAINTAINERS \
	TRANSLATORS \
	TODO \
	data/frogr.desktop.in.in \
	$(pixmap_DATA) \
	$(icon16_DATA) \
	$(icon24_DATA) \
	$(icon32_DATA) \
	$(icon48_DATA) \
	$(icon64_DATA) \
	$(icon128_DATA) \
	$(iconscalable_DATA) \
	$(gtkbuilder_DATA) \
	$(images_DATA) \
	$(man1_MANS)

dist-hook:
	@if test -d "$(srcdir)/.git"; \
	then \
		echo Creating ChangeLog && \
		( cd "$(top_srcdir)" && \
		  echo '# Generated by Makefile. Do not edit.'; echo; \
		  $(top_srcdir)/missing --run git log --stat ) > ChangeLog.tmp \
		&& mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
		|| ( rm -f ChangeLog.tmp ; \
		     echo Failed to generate ChangeLog >&2 ); \
	else \
		echo A git clone is required to generate a ChangeLog >&2; \
	fi
