# This program is free software; you can redistribute it and/or
# modify it under the terms of version 3 of the GNU General Public
# License as published by the Free Software Foundation.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, see <http://www.gnu.org/licenses/>

include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = frogr
DOC_FIGURES = \
	figures/edit-pictures-details.png \
	figures/frogr-remote-organizer.png \
	figures/preferences-connection.png \
	figures/preferences-general.png

DOC_PAGES = \
	add-pictures.page \
	group-pictures.page \
	preferences.page \
	common-problems.page \
	index.page \
	remove-pictures.page \
	create-account.page \
	introduction.page \
	set-pictures.page \
	display.page \
	organize.page \
	tag.page \
	pictures.page \
	upload-pictures.page

DOC_LINGUAS = cs es de en_GB fr ru
dist-hook: doc-dist-hook
